--- a/style.css
+++ b/style.css
@@ -3,16 +3,65 @@
   margin: 0;
   box-sizing: border-box;
   color: var(--color-font);
-  font-family: cochin;
+  font-family: Tahoma;
   font-size: 12px;
 }
+/* COLORES POR DEFECTO */
 :root {
-  --primary-color: #30343f;
-  --secundary-color: #191e2b;
-  --hover-color: #62646b;
-  --color-font: rgb(228, 225, 225);
+  --primary-color: #465c8b;
+  --secundary-color: #063852;
+  --hover-color: #138d90;
+  --color-font: #fcfcfa;
 }
-h4{
+/* COLORES LIGHT MODE */
+:root {
+  --primary-light: #f7ef6a;
+  --secundary-light: #93c178;
+  --light-font: black;
+  --light-hover: #138d90;
+}
+/* LIGHT MODE */
+.light-mode {
+  background-color: var(--primary-light);
+}
+.light-mode * {
+  color: var(--light-font);
+}
+.light-mode header,
+.light-mode .box-style-img,
+.light-mode .box-style-txt,
+.light-mode .box {
+  background-color: var(--secundary-light);
+}
+
+.light-mode #btn-img,
+.light-mode #btn-txt,
+.light-mode #btn-mode,
+.light-mode .input,
+.light-mode #url,
+.light-mode .container-img-bkg,
+.light-mode .bkg-select,
+.light-mode #top,
+.light-mode #bottom,
+.light-mode #size-font,
+.light-mode .fa-align-right,
+.light-mode .fa-align-center,
+.light-mode .fa-align-left,
+.light-mode .txt-FC,
+.light-mode .outline button,
+.light-mode #line-spacing {
+  background-color: var(--primary-light);
+}
+
+.light-mode #btn-img:hover,
+.light-mode #btn-txt:hover,
+.light-mode #btn-mode:hover,
+.light-mode #url:hover {
+  background-color: var(--light-hover);
+}
+
+/* ****************************************************************************** */
+h4 {
   font-weight: bold;
 }
 body {
@@ -20,37 +69,40 @@ body {
   background-color: var(--primary-color);
   position: relative;
 }
-#btn-img:hover{
-background-color: var(--hover-color);
-}
-#btn-txt:hover{
-  background-color: var(--hover-color);
-} 
-#btn-mode:hover{
+#btn-img:hover {
   background-color: var(--hover-color);
 }
-#url:hover{
+#btn-txt:hover {
   background-color: var(--hover-color);
 }
-/*  header */
+#btn-mode:hover {
+  background-color: var(--hover-color);
+}
+#url:hover {
+  background-color: var(--hover-color);
+}
+/*  HEADER */
 header {
   background-color: var(--secundary-color);
   padding: 10px 0;
   text-align: center;
+  margin-bottom: 30px;
 }
 header h1 {
   padding-bottom: 7px;
   font-size: 25px;
 }
-#btn-img, #btn-txt, #btn-mode {
+#btn-img,
+#btn-txt,
+#btn-mode {
   padding: 3px 7px;
   background-color: var(--secundary-color);
   border: none;
 }
-header i{
+header i {
   color: white;
 }
-/* section - box - meme */
+/* SECTION BOX-MEME */
 .box-meme {
   max-height: 600px;
   display: flex;
@@ -61,53 +113,52 @@ header i{
 .container-box {
   width: 400px;
   height: 420px;
-  margin-top: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .top-text,
-.bottom-text
-{
+.bottom-text {
   width: 400px;
-  height: 70px;
+  padding: 25px;
   font-weight: bold;
   font-size: 18px;
   background-color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 .box {
   width: 400px;
-  height: 280px;
-  background-color: black;
+  height: 250px;
+  background-color: var(--secundary-color);
   /* propiedades para que la imagen se acomode en el contenedor */
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-
 }
 .container-box p {
   color: black;
   font-size: 30px;
   font-weight: bold;
 }
-/* boton de la section box-meme */
+/* BOTON DE DESCARGA */
 #download-meme {
   width: 150px;
   height: 30px;
   margin-top: 15px;
-  background-color: #1b5e20;
-  color: white;
+  background-color: var(--hover-color);
+  color: var(--color-font);
   border: none;
   font-weight: bold;
 }
-/*  aside - imagen y texto */
+/*  BARRA IMAGEN Y TEXTO */
 .style-box {
+  height: 100vh;
   position: absolute;
   top: 0;
   right: 0;
   color: white;
 }
 .style-box-txt {
+  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
@@ -122,13 +173,12 @@ header i{
 .box-style-img h4 {
   margin-bottom: 10px;
 }
-/* estilos de las etiquetas de los input */
+/* ETIQUETAS DE LOS INPUTS */
 .box-style-img label {
   display: block;
   font-size: 11px;
   margin-bottom: 3px;
   padding-top: 3px;
-
 }
 #url {
   width: 100%;
@@ -137,7 +187,7 @@ header i{
   border: none;
   margin-bottom: 10px;
 }
-/* contenedor general de color de fondo y caja de opciones de seleccion */
+/* DIV CON COLOR FONDO Y SELECCION DE OPCIONES */
 .img-bkg {
   height: 35px;
   display: flex;
@@ -145,7 +195,7 @@ header i{
   align-items: center;
   color: black;
 }
-/* contenedor color de fondo y hexadecimal */
+/* COLOR FONDO Y HEXADECIMAL */
 .container-img-bkg {
   display: flex;
   justify-content: space-around;
@@ -171,17 +221,7 @@ input[type="color"]::-webkit-color-swatch {
   border: none;
   border-radius: 50%;
 }
-/*  estos eran mis estiladosinput color  */
-/*#bkg-color {
-  background-color: white;
-  width: 15px;
-  height: 15px;
-  color: white;
-  border-radius: 50%;
-  outline: none;
-  border-width: 0;
-}*/
-/* caja de opciones de seleccion */
+/* OPCIONES DE SELECCION */
 .bkg-select {
   width: 80px;
   height: 25px;
@@ -200,10 +240,10 @@ input[type="range"]::-webkit-slider-thumb {
   border-radius: 50%;
   background: rgb(219, 213, 213);
   cursor: pointer;
-  /*box-shadow: 0 0 2px 0 #555;
-  transition: background .3s ease-in-out;*/
+  box-shadow: 0 0 2px 0 #555;
+  transition: background 0.3s ease-in-out;
 }
-/* estilos de las barras de input */
+/* BARRAS DE INPUTS */
 .slides input {
   width: 100%;
   height: 3px;
@@ -211,17 +251,17 @@ input[type="range"]::-webkit-slider-thumb {
   border-radius: 15px;
 }
 
-/* boton de reestanlecer filtros */
+/* BOTON REESTABLECER */
 #btn-reset {
   margin-top: 20px;
   padding: 5px;
-  background-color: var(--primary-color);
-  color: white;
+  background-color: var(--hover-color);
+  color: var(--color-font);
   border: none;
   font-weight: bold;
 }
 
-/* barra lateral texto */
+/* BARRA TEXTO */
 .box-style-txt {
   width: 200px;
   height: 100%;
@@ -237,54 +277,57 @@ input[type="range"]::-webkit-slider-thumb {
   margin-bottom: 3px;
   padding-top: 3px;
 }
-/* texto arriba y abajo de la caja del editor */
+/* TXT ARRIBA Y ABAJO */
 #top,
-#bottom{
+#bottom {
   width: 100%;
   height: 20px;
   margin-bottom: 3px;
   background-color: var(--primary-color);
   border: none;
 }
-.bkg-select{
+.bkg-select {
   width: 100%;
   margin-bottom: 3px;
 }
-#size-font{
-  width: 80px;
+#size-font {
+  width: 75px;
   height: 25px;
   border: none;
-  color: var(--color-font);
   background-color: var(--primary-color);
 }
 .fa-align-right,
 .fa-align-center,
-.fa-align-left{
+.fa-align-left {
   background-color: var(--primary-color);
   width: 23px;
   height: 15px;
 }
-.txt-bkg{
+.txt-bkg {
   display: flex;
   justify-content: space-between;
   margin-top: 4px;
 }
-.txt-FC{
+.txt-FC {
+  display: flex;
+  justify-content: space-around;
   background-color: var(--primary-color);
+  padding: 5px 3px;
+  margin: 4px;
   width: 80px;
   height: 25px;
 }
-.outline{
+.outline {
   margin-top: 5px;
 }
 
-.outline button{
+.outline button {
   background-color: var(--primary-color);
   border: none;
   height: 25px;
   width: 50px;
 }
-#line-spacing{
+#line-spacing {
   width: 100%;
   height: 20px;
   background-color: var(--primary-color);
